[package]
name = "rhiaqey-producer-owm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhiaqey-sdk-rs = { git = "https://github.com/rhiaqey/sdk-rs.git" }
rhiaqey-producers = { git = "https://github.com/rhiaqey/producers.git" }
tokio = { version = "1.37", features = ["full", "rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = { version = "0.4" }
