[package]
name = "rhiaqey-producer-owm"
version = "0.1.40"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
panic = 'abort'     # Abort on panic
overflow-checks = true
codegen-units = 1

[dependencies]
rhiaqey-sdk-rs = { git = "https://github.com/rhiaqey/sdk-rs.git" }
rhiaqey-producers = { git = "https://github.com/rhiaqey/producers.git" }
tokio = { version = "1.39", features = ["full", "rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = { version = "0.4" }
anyhow = { version = "1.0" }
sha256 = { version = "1.5" }
reqwest = { version = "0.12" }
